Make more content for tests.

--- a/content/articles/test/test.mdx
+++ b/content/articles/test/test.mdx
@@ -1,10 +1,10 @@
 ---
-title: "This is some test article"
+title: "This is some test article with really long title. I should never make such a long title, but I'm not sure how to make it shorter."
 summary: "This is my first post! I should use this space to make more descriptive summary."
 date: "06.04.2025"
 author: "Daniel Noworyta"
 status: "published"
-
+tags: ["blog", "article", "first"]
 ---
 {/* <GradientTitleMdx primaryColor="#f12711" secondaryColor="#f5af19" text="This is some test article" /> */}
  
