Cleanup and use catalyst components in mdx.

--- a/content/articles/test/test.mdx
+++ b/content/articles/test/test.mdx
@@ -8,6 +8,81 @@ tags: ["blog", "article", "first"]
 ---
 {/* <GradientTitleMdx primaryColor="#f12711" secondaryColor="#f5af19" text="This is some test article" /> */}
  
+# MDX Formatting Examples
+
+This article demonstrates various MDX formatting features that you can use in your content.
+
+## Text Formatting
+
+You can use **bold text** and *italic text* in your content. You can also combine them like ***bold and italic***.
+
+## Code Examples
+
+Here's an example of inline code: `const greeting = "Hello, World!";`
+
+And here's a code block with syntax highlighting:
+
+```javascript
+function greet(name) {
+  return `Hello, ${name}!`;
+}
+
+console.log(greet("MDX"));
+```
+
+## Lists
+
+### Ordered List
+1. First item
+2. Second item
+3. Third item
+
+### Unordered List
+- Item one
+- Item two
+- Item three
+
+## Tables
+
+Here's an example of a table:
+
+| Feature | Description | Example |
+|---------|-------------|---------|
+| Bold | Makes text bold | **Important** |
+| Italic | Makes text italic | *Emphasis* |
+| Code | Inline code | `const x = 1` |
+| Link | Creates a hyperlink | [Google](https://google.com) |
+
+## Blockquotes
+
+> This is a blockquote. You can use it to highlight important quotes or sections of text.
+
+## Links
+
+You can create [links to other pages](https://example.com) or even [internal links](#text-formatting).
+
+## Images
+
+![Alt text for image](https://via.placeholder.com/150 "Optional title")
+
+## Horizontal Rule
+
+---
+
+This is a new section after a horizontal rule.
+
+## Combining Elements
+
+You can combine different elements:
+
+1. **Bold text** in a list
+2. `Code` in a list
+3. [Links](https://example.com) in a list
+
+> You can even have **bold text** and `code` in blockquotes!
+
 This is my first post!
 ... rest of the content  
+
+
 
