Working on articles page.

--- a/content/articles/test3/test3.mdx
+++ b/content/articles/test3/test3.mdx
@@ -1,11 +1,11 @@
 ---
-title: "Vercel AI SDK Tutorial"
-summary: "I've been a software engineer for a year now. It's been a rollercoaster ride, but I'm glad I took the leap."
+title: "Jakiś tam video tutorial"
+summary: "Więc jeśli jesteś ciekawy, jak zbudować swój brand w IT, nawet jeśli jesteś samoukiem, zapraszam do czytania!"
 date: "06.04.2025"
 author: "Daniel Noworyta"
 authorAvatar: "/images/avatar_1.webp"
 status: "published"
-tags: ["vlog", "youtube", "content creation"]
+tags: ["youtube"]
 type: "tutorial"
 ---
 
