--- a/content/articles/test/test.mdx
+++ b/content/articles/test/test.mdx
@@ -1,88 +1,67 @@
 ---
-title: "This is some test article with really long title. I should never make such a long title, but I'm not sure how to make it shorter."
-summary: "This is my first post! I should use this space to make more descriptive summary."
+title: "Vercel AI SDK Tutorial"
+summary: "Build any LLM app in TypeScript with Vercel's AI SDK. Learn streaming, structured outputs, tool calls and agents."
 date: "06.04.2025"
 author: "Daniel Noworyta"
+authorAvatar: "/images/avatar_1.webp"
 status: "published"
-tags: ["blog", "article", "first"]
+tags: ["Vercel AI SDK"]
+type: "article"
 ---
+
 {/* <GradientTitleMdx primaryColor="#f12711" secondaryColor="#f5af19" text="This is some test article" /> */}
  
-# MDX Formatting Examples
+Bardzo często słyszę rady różnych *guru produktywności* o tym, żeby robić to, co się kocha. Pewnie zdarzyło Ci się usłyszeć coś w stylu: "Rób to co kochasz i znajdź kogoś, kto za to zapłaci. Wtedy nigdy w życiu nie będziesz pracować" 
 
-This article demonstrates various MDX formatting features that you can use in your content.
+Mam z tym problem, bo tego typu podejście nie jest dla mnie prawidłowe. Aby "Rób to, co kochasz" zadziałało, potrzeba jednej bardzo ważnej rzeczy. Otóż musisz być wyjątkowo dobry w tym co chcesz robić. 
 
-## Text Formatting
+Uwielbiam grać w piłkę nożną, chociaż jestem w tym słaby. Nie jestem w stanie zrobić w tym sporcie kariery. To, że to kocham, nic mi nie daje, bo nie znajdzie się osoba chcąca mi za moje granie zapłacić.
 
-You can use **bold text** and *italic text* in your content. You can also combine them like ***bold and italic***.
+Pasja bije na głowę **"Rób to co kochasz"**. Niestety tak wiele osób, nie buduje swojej kariery w branży IT na pasji. Nie zwracamy uwagi na to jak wyglądają nasze marzenia. Martwe marzenia nie są w stanie stworzyć warunków do powstania pasji.
 
-## Code Examples
+## Dlaczego pasja jest tak ważna podczas samodzielnej nauki programowania?
 
-Here's an example of inline code: `const greeting = "Hello, World!";`
+Pasja bije na głowę „Rób to, co kochasz”, ponieważ daje napęd motywacji do czegoś wspanialszego niż Ty i jest czymś mniej specyficznym, bardziej ogólnym niż Twoje osobiste potrzeby.
 
-And here's a code block with syntax highlighting:
+Pasja usuwa cierpienie związane z pracą. Kiedy byłem na początku procesu zmiany branży na IT, uczyłem się przez długie godziny. Nie cierpiałem jednak z tego powodu. Wręcz sprawiało mi to przyjemność, ponieważ miałem cele i poruszałem się w ich kierunku. Podróż wzmacniała mnie i stawiała mi wyzwania. Często była nawet frajdą! Pałałem pasją – dzięki temu, co chciałem i miałem zamiar osiągnąć.
 
 ```javascript
-function greet(name) {
-  return `Hello, ${name}!`;
-}
-
-console.log(greet("MDX"));
+backtick.fences('for blocks')
 ```
 
-## Lists
+## Jak obudzić w sobie pasję podczas nauki?
 
-### Ordered List
-1. First item
-2. Second item
-3. Third item
+Aby zmienić codzienne czynności w pasję i motywację, potrzebujesz powodów. Jakie są Twoje powody i dlaczego są na tyle mocne, że motywują Cię do działania?
 
-### Unordered List
-- Item one
-- Item two
-- Item three
+Jeśli borykasz się z trudnościami w osiągnięciu motywacji, przywróć swoim marzeniom energię i wejdź na drogę, która może prowadzić do ich spełnienia. Martwe marzenia nie są w stanie stworzyć ścieżki dla pasji. Pasja rozpala Twoją wolę zrobienia tego, co niezbędne, co wykracza poza możliwości innych. 
 
-## Tables
+Zauważyłem, że początkujący programiści, którzy mają pasję do programowania, uczą się w sposób odmienny od innych, aby żyć w odmienny sposób. 
 
-Here's an example of a table:
+Wolą poświęć cztery lata na ciężką pracę – w zamian za 40 lat pracy dającej satysfakcję i zadowolenie. 
 
-| Feature | Description | Example |
-|---------|-------------|---------|
-| Bold | Makes text bold | **Important** |
-| Italic | Makes text italic | *Emphasis* |
-| Code | Inline code | `const x = 1` |
-| Link | Creates a hyperlink | [Google](https://google.com) |
+Większość ludzi, niestety, poświęca 40 lat ciężkiej pracy, która nie przynosi zadowolenia i satysfakcji – w zamian za cztery tygodnie wolności lub tyle, na ile pozwala ich płatny urlop.
 
-## Blockquotes
+## Jak znaleźć w sobie pasję do nauki programowania?
 
-> This is a blockquote. You can use it to highlight important quotes or sections of text.
+Pasję wywołuje ekscytacja albo silne niezadowolenie. U mnie było to połączenie tych dwóch stanów.
 
-## Links
+Podekscytowany byłem możliwością zdalnej pracy z ludźmi, którzy codziennie starają się rozwiązywać konkretny problem i sprawiać, by czyjeś życie było łatwiejsze. Poza tym perspektywa posiadania supermocy rozwiązywania problemów przy pomocy kodu zawsze mnie ekscytowała.
 
-You can create [links to other pages](https://example.com) or even [internal links](#text-formatting).
-
-## Images
-
-![Alt text for image](https://via.placeholder.com/150 "Optional title")
-
-## Horizontal Rule
+Do tego odczuwałem silne niezadowolenie ze swojej dotychczasowej kariery. Nie lubiłem robić, tego co robiłem przez 10 pierwszych lat swojej zawodowej kariery i ciągle szukałem sposobów na to, by tego nie robić. Tak szczęśliwej i satysfakcjonującej kariery zbudować się nie da.
 
 ---
 
-This is a new section after a horizontal rule.
+## Ciekawe linki
 
-## Combining Elements
+[Front End Handbook](https://frontendmasters.com/guides/front-end-handbook/2024/#3.1) - 📖  Rozbudowana roadmapa dla osób, które chcą wejść do branży jako od strony frontendowej.  
 
-You can combine different elements:
+[React Native Galaxy](https://galaxies.dev/welcome) - 🎬  Fajne miejsce z darmowymi i płatnymi materiałami do nauki React Native.
 
-1. **Bold text** in a list
-2. `Code` in a list
-3. [Links](https://example.com) in a list
+## Ciekawy tool
 
-> You can even have **bold text** and `code` in blockquotes!
+[Jasnopis](https://jasnopis.pl/prosty-jezyk/) - 🧰  Fajny tool do sprawdzania swojej pisowni. Przydatne dla wszystkich, którzy chcą zacząć tworzyć treści pisane i się nimi dzielić.
 
-This is my first post!
-... rest of the content  
+**P.S.** Jeżeli masz jakieś pytania związane z nauką programowania odpisz na tego meila. Postaram się doprecyzować to, czego nie udało mi się ująć w tym wydaniu.
 
 
 
