--- a/content/articles/how-to-use-react/how-to-use-react.mdx
+++ b/content/articles/how-to-use-react/how-to-use-react.mdx
@@ -5,7 +5,7 @@ date: "06.04.2025"
 author: "Daniel Noworyta"
 authorAvatar: "/images/avatar_1.webp"
 status: "published"
-tags: ["React"]
+tags: ["React", "Tutorial"]
 type: "tutorial"
 ---
 
