--- a/content/articles/abstract-3rd-party-dependencies/abstract-3rd-party-dependencies.mdx
+++ b/content/articles/abstract-3rd-party-dependencies/abstract-3rd-party-dependencies.mdx
@@ -1,5 +1,5 @@
 ---
-title: "How I Became a Programmer"
+title: "Abstract the implementation of 3rd party dependencies"
 summary: "I've been a programmer for a long time, but I never really thought about it until I became one."
 date: "25.05.2025"
 author: "Daniel Noworyta"
@@ -9,9 +9,7 @@ tags: ["Life", "Article"]
 type: "article"
 ---
 
-There is some content here to be presented.
-
-### And other one
+Try not to depend on third-party code directly in your React app without proper consideration. Abstract the implementations away and use standardized types and interfaces internally. That will make maintenance and refactoring so much easier.
 
 ```ts
 // utils/dateUtils.js
@@ -20,7 +18,10 @@ import { format, parseISO } from 'date-fns';
 // Define types for better clarity
 export type DateString = string;
 
-export const formatDate = (date: DateString, dateFormat: string): string => {
+export const formatDate = (
+    date: DateString,
+    dateFormat: string
+  ): string => {
   const parsedDate = parseISO(date);
   return format(parsedDate, dateFormat);
 };
@@ -31,7 +32,11 @@ import { formatDate } from '../utils/dateUtils';
 
 const ExampleComponent = () => {
   const date = '2025-06-29T12:16:00';
-  const formattedDate = formatDate(date, 'yyyy/MM/dd HH:mm:ss');
+
+  const formattedDate = formatDate(
+    date,
+    'yyyy/MM/dd HH:mm:ss'
+  );
 
   return (
     <div>
@@ -40,3 +45,5 @@ const ExampleComponent = () => {
   );
 };
 ```
+
+Try to keep most components dumb and pure. Centralize data loading and other impactful features. Reasoning about a larger app that has for example network requests or async code spread all over the tree is a nightmare.
